[tool.poetry]
name = "flask-example"
version = "0.1.0"
description = ""
authors = ["Josh Benson <handle2001@gmail.com>"]
readme = "README.md"
packages = [{include = "flask_example"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
flake8 = "^7.1.1"
black = "^24.10.0"
isort = "^5.13.2"
safety = "^3.2.10"
bandit = "^1.7.10"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
